--- a/_config.yml
+++ b/_config.yml
@@ -2,18 +2,18 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://mazhuang.org
+url: https://abc1169.github.io
 date_format: "ordinal"
-title: 码志
-subtitle: "公众号：闷骚的程序员"
-description: "马壮的个人博客，公众号：闷骚的程序员"
-keywords: 码志, Zhuang Ma, mzlogin, mazhuang, 闷骚的程序员
+title: bzx 
+subtitle: disitian 
+description: bzx de changshi 
+keywords: 毕濯玺
 timezone: Asia/Shanghai
 encoding: "utf-8"
 # 页面左下角显示的年份
-since: 2015
+since: 2021
 # 源码仓库，请替换成自己的
-repository: mzlogin/mzlogin.github.io
+repository: abc1169/abc1169.github.io
 # 对 css 和 js 资源的 cdn 加速配置
 cdn:
     jsdelivr:
@@ -39,7 +39,7 @@ components:
     # 页面右上角，以及「关于」页面的二维码
     # 修改图片请替换 assets/images/qrcode.jpg
     qrcode:
-        enabled: true
+        enabled: false
         image_alt: 闷骚的程序员
     # 维基索引页使用哪种视图，支持 列表（list）/分类（cate）
     wiki:
@@ -49,17 +49,17 @@ compress_html:
   clippings: all
   comments: ["<!--", "-->"]
 # 代码高亮风格，支持的 theme 列表见 https://github.com/mzlogin/rouge-themes
-highlight_theme: github
+highlight_theme: base16.monokai.dark
 
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Zhuang Ma
+author: bzx
 organization: 
 organization_url: 
-github_username: mzlogin
-location: Wuhan, China
-email: chumpma@gmail.com
+github_username: babc
+location: Dalian, China
+email: bzx@qq.com
 
 # ---------------- #
 #    Navigation    #
@@ -67,11 +67,11 @@ email: chumpma@gmail.com
 navs:
   -
     href: /
-    label: 首页
+    label: cv
 
   -
     href: /categories/
-    label: 分类
+    label: source
 
 #   -
 #     href: /archives/
@@ -83,15 +83,15 @@ navs:
 
   -
     href: /wiki/
-    label: 维基
+    label: wiki
 
   -
     href: /links/
-    label: 链接
+    label: categories
 
   -
     href: /about/
-    label: 关于
+    label: other
 
 # ---------------- #
 #       RSS        #
